# PINKCC_challenge_2025

./: .gitignore  .gitmodules  LICENSE  README.md  association.txt  data_exploration.ipynb  env.sh  export_path.sh  full_inference.py  labels_stats.txt  main.py  main_usage.py  main_workflow.py  mama.txt  note_data_adrien  note_data_alex  note_data_mael  pyproject.toml  requirements.txt  run_script.sh
MedNeXt/: training_script.sh
exploration_notebooks/: data_exploration.ipynb
final_cross_model_ensembling/: README.md  majority_vote.py  probability_union.py
final_segmentation_pipelines/MedNeXt/: README.md  run_scripts.sh
final_segmentation_pipelines/nnUNet/: README.md  run_scripts.sh  training_script.sh
gpu_scripts/: hotpoop.sh
gpu_scripts/nn_unet/: dataset_converter.sh  preprocessing.sh  training_2d.sh  training_3d_cascade_fullres.sh  training_3d_fullres.sh  training_3d_lowres.sh
mednext_pipeline/: README.md  inference_script.sh
nnUNet/: README.md
nnUNet_pipeline/: README.md  inference_script.sh
ocd/: __init__.py  config.py  loss.py  utils.py
ocd/dataset/: data_augmentation.py  dataset.py  dataset2d.py  dataset3d.py  sample_utils.py  segmentation_dataset_2D.py  segmentation_dataset_3D.py  two_dim_dataset.py
ocd/loops/: 2d.py  (+2 more)
project/: data_augmentation.py  dataset.py  file_explorer.py  main.py  visualizer.py
scripts/: check_all_orientation.py  clean_specific_scans.py  convert_2d_preds_to_nifti.py  convert_back_preds.py  convert_dataset.py  convert_dataset_test.py  create_2d_dataset.py  data_exploration.py  fuck_them_all.py  generate_labels_info_file.py  list_orientation_in_headers.py  main.py  prepare_data_for_medsam.py  prout.py  rename.py  test_stuff.py  tmp.py  train_2d_nn_unet.py  update_0793.py
tools/: README.md
(+16 files in other folders)
