[project]
name = "pinkcc"
version = "0.1.0"
description = "Ovarian Cancer Destroyer's repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "ipdb>=0.13.13",
  "loguru>=0.7.3",
  "matplotlib>=3.10.1",
  "monai",
  "nibabel>=5.3.2",
  "pandas>=2.2.3",
  "rich>=14.0.0",
  "scikit-learn>=1.6.1",
  "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocd"]

[tool.pyright]
include = ["ocd"]
venvPath = "."
venv = ".venv"

[tool.pydocstyle]
convention = "numpy"
add-ignore = ["D1"]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
select = ["I", "E", "F", "UP", "B", "SIM"]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
